--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "vite build --watch"
     },
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vue-template-compiler": "^2.7.15"
+    },
+    "dependencies": {
+        "-": "^0.0.1",
+        "laravel-mix": "^6.0.49",
+        "save-dev": "^0.0.1-security"
     }
 }
